# PCS2026

./: esercitazione0.txt  esercitazione1.txt
esercitazione1/: CMakeLists.txt  mediacitta.cpp  printargs.cpp
esercitazione10/: CMakeLists.txt  main.cpp  metodo_gradiente_coniugato.hpp
esercitazione2/: CMakeLists.txt  bubblesort.cpp  esercizio2.cpp  posmemoria.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rationalclass.hpp
esercitazione4/: bubblesort.hpp  measure_sorts.cpp  selectionsort.hpp  sort.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  Considerazioni.txt  compare_small.cpp  different_quicksort.hpp  insertionsort.hpp  mergesort.hpp  quicksort.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione8/: CMakeLists.txt  classe_grafo.hpp  test_grafi.cpp
esercitazione9/: CMakeLists.txt  classe_archi.hpp  classe_grafo.hpp  dfs_ricorsivo.hpp  dijkstra.hpp  fifo.hpp  graphviz.hpp  lifo.hpp  main.cpp  visite.hpp
